# Postgres-MCP

./: README.md  main.py  pyproject.toml
src/pg_mcp/: client.py  database.py  server.py
